--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 body {
-  background-color: rgb(58, 58, 58);
+  background-color: rgb(255, 92, 92);
   margin-top: 100px;
 }
 
 .carousel-container {
   width: 900px;
-  height: 400px;
+  height: 540px;
   position: relative;
   margin: 0 auto;
-  border:5px black ridge;
+  border:5px #227724 ridge;
   
 }
 
@@ -19,15 +19,18 @@ body {
 }
 .carousel img {
   width: 100%;
-
-}
-
-.item {
-  position: absolute;
-  display: none;
+  height: 520px;
+  float: center;
+  
   
 }
 
+.item {
+  display: none;
+
+  
+}
+/*The caption*/
 .caption {
   position: absolute;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -44,8 +47,7 @@ body {
 .main {
   display: block;
 }
-
-
+/*The back button*/
 .navigation .prev {
   position: absolute;
   z-index: 10;
@@ -54,6 +56,7 @@ body {
   left: 10px;
   font-weight: 700;
 }
+/*The next button*/
 .navigation .next {
   right: 10px;
   position: absolute;
@@ -62,7 +65,7 @@ body {
   top: 40%;
 }
 .navigation .nav-btn {
-  background: rgba(255, 255, 255, 0.55);
+  background: rgba(107, 107, 107, 0.55);
   cursor: pointer;
   border-radius: 50%;
   width: 30px;
@@ -71,6 +74,9 @@ body {
   padding: 5px;
   
 }
+
+?
+/*Background color when the mouse is hovering on the buttom*/
 .navigation .nav-btn:hover {
   background: white;
 }
